testsuite/tests/typecheck/should_fail/tcfail154.stderr

tcfail154.hs:12:10: error:
    • Variable ‘a’ occurs more often
        in the constraint ‘C a a’ than in the instance head
      (Use UndecidableInstances to permit this)
    • In the instance declaration for ‘Eq (T a)’
